@@ -1,1 +1,1 @@
-LINBO 2.3.61-0
+LINBO 2.3.62-0
